--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -24,7 +24,7 @@ const frontpage = await getFrontpage();
         >
         </div>
       </div>
-      <LatestNewsBox />
+      <LatestNewsBox count={4} />
     </div>
     <div class="grid grid-cols-2 gap-6 items-start">
       <ImportantDatesBox />
