--- a/src/components/MainLayout.astro
+++ b/src/components/MainLayout.astro
@@ -23,7 +23,7 @@ const { title } = Astro.props;
       rel="stylesheet"
     />
   </head>
-  <body class="bg-white">
+  <body class="bg-white pb-8">
     <Header />
     <slot />
   </body>
