--- a/src/pages/handbok/[handbookSlug]/[articleSlug]/index.astro
+++ b/src/pages/handbok/[handbookSlug]/[articleSlug]/index.astro
@@ -1,6 +1,6 @@
 ---
 import { documentToHtmlString } from "@contentful/rich-text-html-renderer";
-import Card from "../../../../components/Card.astro";
+import nb from "date-fns/locale/nb/index.js";
 import HandbookNav from "../../../../components/HandbookNav.astro";
 import MainLayout from "../../../../components/MainLayout.astro";
 import {
@@ -10,7 +10,6 @@ import {
 } from "../../../../lib/data";
 import { notEmpty } from "../../../../lib/notEmpty";
 import { parseJSON, format } from "date-fns";
-import SidebarLayout from "../../../../components/SidebarLayout.astro";
 import Container from "../../../../components/Container.astro";
 
 export const getStaticPaths = async () => {
@@ -50,7 +49,9 @@ if (!article || !handbook) {
         <hr class="my-8" />
         <div class="mt-8 text-sm text-gray-500">
           Sist oppdatert: {
-            format(parseJSON(article.sys.updatedAt), "dd.MM.yyyy")
+            format(parseJSON(article.sys.updatedAt), "d. MMMM yyyy", {
+              locale: nb,
+            })
           }
         </div>
       </div>
