Minimum høyde på forsidebilde

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,7 +13,7 @@ const frontpage = await getFrontpage();
 <MainLayout>
   <Container>
     <div class="grid grid-cols-[1fr_22rem] gap-6 mb-6">
-      <div class="relative group rounded-xl overflow-hidden">
+      <div class="relative group rounded-xl overflow-hidden min-h-[384px]">
         <div
           class="absolute bg-cover bg-center inset-0"
           style={`background-image: url('${generateImageUrl(
