--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,9 +1,13 @@
 ---
 ---
 
-<header class="flex items-center gap-4 p-8 border-b border-gray-200 mb-8">
+<header
+  class="flex flex-col md:flex-row items-center gap-4 p-8 border-b border-gray-200 mb-8"
+>
   <a href="/" class="text-2xl">Hosle Huseierforening</a>
-  <nav class="ml-auto flex items-center gap-8 print:hidden">
+  <nav
+    class="md:ml-auto flex items-center gap-4 md:gap-8 print:hidden flex-wrap"
+  >
     <a href="/" class="font-medium">Hjem</a>
     <a href="/handbok/beboer" class="font-medium">Beboerhåndbok</a>
     <a href="/handbok/styre" class="font-medium">Styrehåndbok</a>
