--- a/src/pages/handbok/[handbookSlug]/[articleSlug]/index.astro
+++ b/src/pages/handbok/[handbookSlug]/[articleSlug]/index.astro
@@ -37,13 +37,15 @@ if (!article || !handbook) {
 
 <MainLayout title={article.fields.title}>
   <Container>
-    <div class="w-full grid grid-cols-[1fr_22rem] gap-6 items-start">
+    <div
+      class="w-full grid grid-cols-1 lg:grid-cols-[1fr_22rem] gap-6 items-start mx-2"
+    >
       <div>
         <h1 class="font-medium text-4xl">
           {article.fields.title}
         </h1>
         <hr class="my-8" />
-        <div class="prose max-w-none print:prose-sm">
+        <div class="prose max-sm:prose-sm max-w-none print:prose-sm">
           <div set:html={documentToHtmlString(article.fields.body)} />
         </div>
         <hr class="my-8" />
