--- a/src/pages/handbok/[handbookSlug]/[articleSlug]/index.astro
+++ b/src/pages/handbok/[handbookSlug]/[articleSlug]/index.astro
@@ -50,17 +50,19 @@ if (!article || !handbook) {
             set:html={documentToHtmlString(article.fields.body, {
               renderNode: {
                 "embedded-asset-block": (node) => {
-                  const { title, file } = node.data.target.fields;
+                  const { file, title } = node.data.target.fields;
                   const mimeType = file.contentType;
                   const mimeGroup = mimeType.split("/")[0];
 
                   if (mimeGroup === "image") {
                     return `
-                    <img
-                      style="display: block; width: 100%; height: auto;"
-                      src="${file.url}?w=1200&fm=webp"
-                      alt="${title}"
-                    />
+                    <a href="${file.url}" target="_blank">
+                      <img
+                        style="display: block; width: 100%; height: auto;"
+                        src="${file.url}?w=1200&fm=webp"
+                        alt="${title}"
+                      />
+                    </a>
                   `;
                   }
 
