--- a/src/components/LatestNewsBoxItem.astro
+++ b/src/components/LatestNewsBoxItem.astro
@@ -1,7 +1,6 @@
 ---
 import type { Asset } from "contentful";
-import { format, parseISO } from "date-fns";
-import nb from "date-fns/locale/nb/index.js";
+import { toLongDate } from "../lib/dates";
 import { generateImageUrl } from "../lib/images";
 
 type Props = {
@@ -31,8 +30,7 @@ const { image, title, date, slug, isActive } = Astro.props;
     >
       {title}
     </h2>
-    <time class="text-gray-500 text-xs" datetime={date}
-      >{format(parseISO(date), "d. MMMM yyyy", { locale: nb })}</time
+    <time class="text-gray-500 text-xs" datetime={date}>{toLongDate(date)}</time
     >
   </div>
 </a>
