--- a/src/pages/handbok/[handbookSlug]/[articleSlug]/index.astro
+++ b/src/pages/handbok/[handbookSlug]/[articleSlug]/index.astro
@@ -1,6 +1,5 @@
 ---
 import { documentToHtmlString } from "@contentful/rich-text-html-renderer";
-import nb from "date-fns/locale/nb/index.js";
 import HandbookNav from "../../../../components/HandbookNav.astro";
 import MainLayout from "../../../../components/MainLayout.astro";
 import {
@@ -9,8 +8,8 @@ import {
   getHandbookBySlug,
 } from "../../../../lib/data";
 import { notEmpty } from "../../../../lib/notEmpty";
-import { parseJSON, format } from "date-fns";
 import Container from "../../../../components/Container.astro";
+import { toLongDate } from "../../../../lib/dates";
 
 export const getStaticPaths = async () => {
   const handbooks = await getAllHandbooks();
@@ -76,11 +75,7 @@ if (!article || !handbook) {
         </div>
         <hr class="my-8" />
         <div class="mt-8 text-sm text-gray-500">
-          Sist oppdatert: {
-            format(parseJSON(article.sys.updatedAt), "d. MMMM yyyy", {
-              locale: nb,
-            })
-          }
+          Sist oppdatert: {toLongDate(article.sys.updatedAt)}
         </div>
       </div>
       <div class="rounded-xl border border-stone-200 px-8 py-4">
