--- a/src/pages/nyhet/[newsArticleId].astro
+++ b/src/pages/nyhet/[newsArticleId].astro
@@ -1,12 +1,11 @@
 ---
 import { documentToHtmlString } from "@contentful/rich-text-html-renderer";
-import { format, parseISO } from "date-fns";
 import Container from "../../components/Container.astro";
 import ContentfulImage from "../../components/ContentfulImage.astro";
 import LatestNewsBox from "../../components/LatestNewsBox.astro";
 import MainLayout from "../../components/MainLayout.astro";
 import { getAllNewsArticleSlugs, getNewsArticle } from "../../lib/data";
-import nb from "date-fns/locale/nb/index.js";
+import { toLongDate } from "../../lib/dates";
 
 export const getStaticPaths = async () => {
   const slugs = await getAllNewsArticleSlugs();
@@ -46,11 +45,7 @@ if (!article) {
         </h1>
         <hr class="mb-2" />
         <div class="text-gray-500 mb-16">
-          {
-            format(parseISO(article.fields.date), "d. MMMM yyyy", {
-              locale: nb,
-            })
-          }
+          {toLongDate(article.fields.date)}
         </div>
         <div class="prose max-sm:prose-sm max-w-none print:prose-sm">
           <div set:html={documentToHtmlString(article.fields.body)} />
