Forbedret mobil-design

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,14 +2,18 @@
 ---
 
 <header
-  class="flex flex-col md:flex-row items-center gap-4 p-8 border-b border-gray-200 mb-8"
+  class="flex flex-col md:flex-row items-center gap-4 p-4 md:p-8 border-b border-gray-200 mb-8"
 >
   <a href="/" class="text-2xl">Hosle Huseierforening</a>
   <nav
     class="md:ml-auto flex items-center gap-4 md:gap-8 print:hidden flex-wrap"
   >
-    <a href="/" class="font-medium">Hjem</a>
-    <a href="/handbok/beboer" class="font-medium">Beboerhåndbok</a>
-    <a href="/handbok/styre" class="font-medium">Styrehåndbok</a>
+    <a href="/" class="font-medium text-sm md:text-base">Hjem</a>
+    <a href="/handbok/beboer" class="font-medium text-sm md:text-base"
+      >Beboerhåndbok</a
+    >
+    <a href="/handbok/styre" class="font-medium text-sm md:text-base"
+      >Styrehåndbok</a
+    >
   </nav>
 </header>
