--- a/src/components/LatestNewsBox.astro
+++ b/src/components/LatestNewsBox.astro
@@ -10,7 +10,7 @@ type Props = {
 const articles = await getLatestNewsArticles();
 ---
 
-<div class="rounded-xl border border-stone-200 px-8 py-4">
+<div class="rounded-xl border border-stone-200 px-6 md:px-8 py-2 md:py-4">
   <h2 class="font-bold font-montserrat text-xs text-gray-500 uppercase mt-4">
     Siste nytt
   </h2>
