--- a/src/components/ImportantDatesBox.astro
+++ b/src/components/ImportantDatesBox.astro
@@ -22,7 +22,7 @@ const months = [
 ];
 ---
 
-<div class="rounded-xl border border-stone-200 px-8 py-4">
+<div class="rounded-xl border border-stone-200 px-6 md:px-8 py-2 md:py-4">
   <h2 class="font-bold font-montserrat text-xs text-gray-500 uppercase mt-4">
     Kalender
   </h2>
