--- a/src/components/UsefulInfoBox.astro
+++ b/src/components/UsefulInfoBox.astro
@@ -5,14 +5,14 @@ import { toShortDateWithWeekday } from "../lib/dates";
 const frontpage = await getFrontpage();
 ---
 
-<div class="rounded-xl border border-stone-200 px-8 py-4">
+<div class="rounded-xl border border-stone-200 px-6 md:px-8 py-2 md:py-4">
   <h2 class="font-bold font-montserrat text-xs text-gray-500 uppercase mt-4">
     Nyttig informasjon
   </h2>
   <div class="grid grid-cols-2 my-8 gap-8">
     <div class="col-span-2">
       <h2 class="text-xs text-gray-500">E-post</h2>
-      <p class="font-bold">
+      <p class="font-bold max-sm:text-sm">
         <a
           href={`mailto:${frontpage.email}`}
           class="hover:text-rose-600 transition-colors duration-700"
@@ -22,7 +22,7 @@ const frontpage = await getFrontpage();
     </div>
     <div class="col-span-2">
       <h2 class="text-xs text-gray-500">Facebook-gruppe</h2>
-      <p class="font-bold">
+      <p class="font-bold max-sm:text-sm">
         <a
           href={frontpage.fbGroup}
           target="_blank"
@@ -33,21 +33,21 @@ const frontpage = await getFrontpage();
     </div>
     <div>
       <h2 class="text-xs text-gray-500">Felleskostnad</h2>
-      <p class="font-bold">2 190,-/mnd</p>
+      <p class="font-bold max-sm:text-sm">2 190,-/mnd</p>
     </div>
     <div>
       <h2 class="text-xs text-gray-500">Antall hus</h2>
-      <p class="font-bold">43</p>
+      <p class="font-bold max-sm:text-sm">43</p>
     </div>
     <div>
       <h2 class="text-xs text-gray-500">Restavfall (tømming)</h2>
-      <p class="font-bold">
+      <p class="font-bold max-sm:text-sm">
         {toShortDateWithWeekday(frontpage.pickupDateRest)}
       </p>
     </div>
     <div>
       <h2 class="text-xs text-gray-500">Papir og papp (tømming)</h2>
-      <p class="font-bold">
+      <p class="font-bold max-sm:text-sm">
         {toShortDateWithWeekday(frontpage.pickupDatePaper)}
       </p>
     </div>
