--- a/src/pages/handbok/[handbookSlug]/[articleSlug]/index.astro
+++ b/src/pages/handbok/[handbookSlug]/[articleSlug]/index.astro
@@ -37,10 +37,10 @@ if (!article || !handbook) {
 <MainLayout title={article.fields.title}>
   <Container>
     <div
-      class="w-full grid grid-cols-1 lg:grid-cols-[1fr_22rem] gap-6 items-start mx-2"
+      class="w-full grid grid-cols-1 lg:grid-cols-[1fr_22rem] gap-6 items-start mx-4"
     >
       <div>
-        <h1 class="font-medium text-4xl">
+        <h1 class="font-medium text-2xl md:text-4xl">
           {article.fields.title}
         </h1>
         <hr class="my-8" />
