--- a/src/components/MainLayout.astro
+++ b/src/components/MainLayout.astro
@@ -13,7 +13,7 @@ const { title } = Astro.props;
   <head>
     <meta charset="utf-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="viewport" content="width=device-width" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     {title && <title>{title} - Hosle Huseierforening</title>}
     {!title && <title>Hosle Huseierforening</title>}
     <link rel="preconnect" href="https://fonts.googleapis.com" />
